add authentication, leaderboard, game

--- a/vue-practice/amplify/backend/backend-config.json
+++ b/vue-practice/amplify/backend/backend-config.json
@@ -1,6 +1,24 @@
 {
+  "api": {
+    "vuepractice": {
+      "dependsOn": [],
+      "output": {
+        "authConfig": {
+          "additionalAuthenticationProviders": [],
+          "defaultAuthentication": {
+            "apiKeyConfig": {
+              "apiKeyExpirationDays": 7
+            },
+            "authenticationType": "API_KEY"
+          }
+        }
+      },
+      "providerPlugin": "awscloudformation",
+      "service": "AppSync"
+    }
+  },
   "auth": {
-    "ericvuefb680f78": {
+    "vuepractice9b4f0cdf": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
