--- a/vue-practice/amplify/.config/project-config.json
+++ b/vue-practice/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-  "projectName": "ericvue",
+  "projectName": "vuepractice",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
