--- a/vue-practice/package.json
+++ b/vue-practice/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-components": "^1.9.40",
+    "@aws-amplify/ui-vue": "^3.1.3",
+    "aws-amplify": "^5.0.9",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
   },
